<resources>
    <string name="app_name">MoosicElectricBoogaloo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LibraryMenuTitle">Your Library</string>
    <string name="app_title_a">Moosic App</string>
    <string name="app_title_b">Electric Boogalo</string>

    <string name="continue_as_guest"><u>Continue As Guest</u></string>
    <string name="title_activity_login_app_login">LoginAppLogin</string>

    <string name="title_activity_app_login">AppLoginActivity</string>
    <string name="title_activity_app_sign_in">AppSignInActivity</string>

    <string name="password_hint">Password</string>
    <string name="signin_title">Login</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="signin_email_hint">Email</string>
    <string name="cancel_link"><u>Cancel</u></string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="signup_title">Sign Up</string>
    <string name="web_client_id">51515790185-034965cj13q00hh1kvn11cirtc5ups2h.apps.googleusercontent.com</string>
    <string name="app_logo_desc">app logo</string>
    <string name="library_add_desc">Create playlist or Add song</string>
    <string name="library_favourites_title">Favourites</string>
    <string name="library_playlists_title">Playlists</string>
    <string name="playlist_totallength_text">Total length:</string>
    <string name="playlist_songcount_text">Songs:</string>
    <string name="library_songs_title">Songs</string>
    <string name="songList_itemLength_text">Length:</string>
    <string name="song_play_title_default">No Song Playing</string>
    <string name="song_play_artist_default">None</string>
    <string name="prev_btn_text">Previous</string>
    <string name="skip_btn_text">Skip</string>
    <string name="playlist_add_song_txt">Add song to playlist</string>
    <string name="playlist_more_options_txt">More options</string>
    <string name="library_search_hint">Search in the library</string>
    <string name="library_add_item_dialog_txt">Library Add Item</string>
    <string name="lib_add_dialog_create_playlist_btn">Create Playlist</string>
    <string name="lib_add_dialog_add_song_btn">Add Song</string>
    <string name="SettingsMenuTitle">Settings</string>
    <string name="accountSettingsTitle">Account</string>
    <string name="SearchMenuTitle">Search</string>
    <string name="search_menu_search_hint">Search artists, songs, playlists</string>

</resources>