<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:paddingHorizontal="@dimen/dialog_padding_side"
    android:paddingTop="@dimen/dialog_padding_top"
    android:paddingBottom="@dimen/dialog_padding_bottom">

    <TextView
        android:id="@+id/textView3"
        style="@style/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_add_item_dialog_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createPlaylistBtn"
        style="@style/PrimaryStyle2"
        android:layout_marginTop="16dp"
        android:text="@string/lib_add_dialog_create_playlist_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/addSongBtn"
        style="@style/SecondaryButtonStyle"
        android:text="@string/lib_add_dialog_add_song_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPlaylistBtn" />

    <Button
        android:id="@+id/cancelBtn"
        style="@style/LinkButtonStyle"
        android:text="@string/cancel_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSongBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>