<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.AppSignupActivity"
    android:background="@color/color_b"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="314dp"
        android:layout_height="526dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extrabold"
                android:letterSpacing="0.35"
                android:text="@string/moosic_app_title"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extrabold"
                android:letterSpacing="0.22"
                android:text="@string/apptitle_sub"
                android:textAlignment="center"
                android:textColor="@color/color_a" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="252dp"
            android:layout_height="371dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:id="@+id/textView"
                style="@style/menuSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:text="@string/signup_title"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/signUpEmailInput"
                style="@style/LoginTextInputStyle"
                android:layout_marginBottom="12dp"
                android:ems="10"
                android:hint="@string/signin_email_hint"
                android:inputType="textEmailAddress"
                android:textAlignment="gravity"
                android:autofillHints="emailAddress"
                />

            <EditText
                android:id="@+id/signUpPasswordInput"
                style="@style/LoginTextInputStyle"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:autofillHints="password"
                />

            <EditText
                android:id="@+id/signUpConfirmPasswordInput"
                style="@style/LoginTextInputStyle"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:autofillHints="password"
                />

            <Button
                android:id="@+id/signUpButton"
                style="@style/PrimaryButtonStyle"
                android:layout_width="226dp"
                android:layout_height="58dp"
                android:layout_marginTop="32dp"
                android:onClick="handleSignup"
                android:text="@string/sign_up_button_text" />

            <Button
                android:id="@+id/signinCancelBtn"
                style="@style/LinkButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="handleCancel"
                android:text="@string/cancel_link" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>