<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_b"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.playlist.PlaylistActivity">


    <ImageButton
        android:id="@+id/addBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/library_add_desc"
        android:onClick="handleAddSongs"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ToggleButton

        android:id="@+id/favouriteBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/favourite_icon"

        android:scaleType="fitCenter"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="@+id/addBtn"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/addBtn"
        app:layout_constraintTop_toTopOf="@+id/addBtn" />

    <ImageButton
        android:id="@+id/moreOptionsBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/playlist_more_options_txt"
        android:onClick="handleMore"
        android:scaleType="fitCenter"
        android:src="@drawable/more_options_icon"
        app:layout_constraintBottom_toBottomOf="@+id/addBtn"
        app:layout_constraintEnd_toStartOf="@+id/favouriteBtn"
        app:layout_constraintTop_toTopOf="@+id/addBtn" />

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/playlist_add_song_txt"
        android:onClick="handleBack"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>