<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_b"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AppLoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="315dp"
        android:layout_height="545dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="273dp"
            android:layout_height="187dp"
            android:backgroundTint="@color/clear"
            android:contentDescription="@string/app_logo_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo"
            app:tint="@color/color_a_o" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extrabold"
                android:letterSpacing="0.35"
                android:text="@string/app_title_a"
                android:textSize="24sp"
                tools:layout_conversion_absoluteHeight="42dp"
                tools:layout_conversion_absoluteWidth="228dp"
                tools:layout_editor_absoluteX="92dp"
                tools:layout_editor_absoluteY="142dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extrabold"
                android:letterSpacing="0.22"
                android:text="Electric Boogalo"
                android:textAlignment="center"
                android:textColor="@color/color_a"
                tools:layout_conversion_absoluteHeight="25dp"
                tools:layout_conversion_absoluteWidth="228dp"
                tools:layout_editor_absoluteX="92dp"
                tools:layout_editor_absoluteY="184dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnLogin"
                style="@style/PrimaryButtonStyle"
                android:onClick="handleLogin"
                android:text="Login" />


            <Button
                android:id="@+id/GoogleSignInBtn"
                style="@style/PrimaryButtonStyle"
                android:layout_width="match_parent"
                android:backgroundTint="@android:color/background_light"
                android:fontFamily="@font/poppins"
                android:letterSpacing="0.05"
                android:onClick="handleGoogleSignIn"
                android:text="Sign in with Google"
                android:textColor="@color/common_google_signin_btn_text_light_default"
                android:textSize="11sp"
                app:icon="@drawable/googleg_standard_color_18"
                app:iconTint="@android:color/transparent"
                app:iconTintMode="src_over" />

            <Button
                android:id="@+id/btnRegister"
                style="@style/SecondaryButtonStyle"
                android:layout_width="192dp"
                android:onClick="handleSignUp"
                android:text="Sign Up" />

            <Button
                android:id="@+id/btnContinueAsGuest"
                style="@style/LinkButtonStyle"
                android:layout_width="192dp"
                android:onClick="handleContinueAsGuest"
                android:text="@string/continue_as_guest" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>